--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2>Desarrollador de Software - Junior en Backend</h2>
             <div class="redes">
                 <a href="https://github.com/javicia"><i class="fa-brands fa-github"></i></a>
-                <a href="https://linkedin.com/in/javier-garcia-perez-b4196372"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="www.linkedin.com/in/javicia"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
         </div>
     </section>
@@ -595,7 +595,7 @@
             <i class="fa-solid fa-angles-up"></i>
         </a>
         <div class="redes">
-            <a href="https://linkedin.com/in/javier-garcia-perez-b4196372"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="www.linkedin.com/in/javicia"><i class="fa-brands fa-linkedin-in"></i></a>
             <a href="https://github.com/javicia"><i class="fa-brands fa-github"></i></a>
         </div>
     </footer>
