--- a/index.html
+++ b/index.html
@@ -418,8 +418,23 @@
                             <div class="circuloi"></div>
                         </div>
                         </div>
-                </div>
-
+                        <h3>Idiomas</h3>
+                        <div class="item izq">
+                            <h4>Español</h4>
+                            <span class="casa">Nativo</span>
+                            <div class="conectori">
+                                <div class="circuloi"></div>
+                            </div>
+                            </div>
+                            <div class="item izq">
+                                <h4>Inglés</h4>
+                                <span class="casa">A2</span>
+                                <div class="conectori">
+                                    <div class="circuloi"></div>
+                                </div>
+                                </div>
+                            </div>
+                
                 <div class="col derecha">
                     <h3>Experiencia de trabajo</h3>
                     <div class="item der">
