--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2>Desarrollador de Software - Junior en Backend</h2>
             <div class="redes">
                 <a href="https://github.com/javicia"><i class="fa-brands fa-github"></i></a>
-                <a href="www.linkedin.com/in/javicia"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/javicia"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
         </div>
     </section>
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <button>
-                <a href="https://drive.google.com/file/d/1-zY6Lg8svjvZtvLs3veVDR04nwtgfxg6/view?usp=sharing" 
+                <a href="https://drive.google.com/file/d/1v54VlRvETu8nNnA5TYG1HnQJo86Oe7PH/view?usp=sharing" 
                 download="CurriculumJavier.pdf" ><i class="fa-solid fa-download" style="color: white;"></i>
                 <span style="color: white;">Descarga CV</span></a>
                 
@@ -438,11 +438,14 @@
                 <div class="col derecha">
                     <h3>Experiencia de trabajo</h3>
                     <div class="item der">
-                        <h4>Prácticas Desarrollador de software</h4>
+                        <h4>Backend Junior Java</h4>
                         <span class="casa">Tragsatec</span>
                         <span class="fecha">2023 - Actualidad</span>
-                        <p>-Mantenimiento de software.</br>
+                        <p>-Desarrollo de aplicaciones.</br>
+                            -Mantenimiento de aplicaciones.</br>
                             -Testing y depuración.</br>
+                            -APIS y servicios web.</br>
+                            -Seguridad.</br>
                             -Documentación de código.</br>
                             -Colaboración con otros programadores.</br>
                             -Investigación de nuevas tecnologías.</br>
@@ -501,23 +504,24 @@
                         </div>
                     </div>
                     <div class="item der">
-                        <h4>Desarrollador de Software</h4>
+                        <h4>Desarrollador de Software JEE</h4>
                         <span class="casa">Sermicro</span>
                         <span class="fecha">2008 - 2009</span>
-                        <p>-Desarrollo de software.</br>
+                        <b>-Desarrollo de software JEE.</b>
                             -Mantenimiento de software.</br>
                             -Testing y depuración.</br>
                             -Documentación de código.</br>
                             -Colaboración con otros programadores.</br>
                             -Investigación de nuevas tecnologías.</br>
                             -Participación en reuniones de equipo.</br>
-                            -Comunicación con clientes.</p>
+                            -Comunicación con clientes.</br>
+                            -Pruebas beta con cliente final.</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
                     </div>
                     <div class="item der">
-                        <h4>Especialista en soprte técnico</h4>
+                        <h4>Especialista en soporte técnico</h4>
                         <span class="casa">Danone</span>
                         <span class="fecha">2007 - 2008</span>
                         <p>-Mantenimiento de los sistemas informáticos.</br>
@@ -619,7 +623,7 @@
             <i class="fa-solid fa-angles-up"></i>
         </a>
         <div class="redes">
-            <a href="www.linkedin.com/in/javicia"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="ttps://www.linkedin.com/in/javicia"><i class="fa-brands fa-linkedin-in"></i></a>
             <a href="https://github.com/javicia"><i class="fa-brands fa-github"></i></a>
         </div>
     </footer>
