--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
             <i class="fa-solid fa-angles-up"></i>
         </a>
         <div class="redes">
-            <a href="ttps://www.linkedin.com/in/javicia"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/javicia"><i class="fa-brands fa-linkedin-in"></i></a>
             <a href="https://github.com/javicia"><i class="fa-brands fa-github"></i></a>
         </div>
     </footer>
