--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <img src="img/fotoPerfil.png" alt="">
             </div>
             <h1>JAVIER GARCIA PEREZ</h1>
-            <h2>Desarrollador de Software - Junior en Backend</h2>
+            <h2>Desarrollador de Software - Android Mobile Developer</h2>
             <div class="redes">
                 <a href="https://github.com/javicia"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/javicia"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -50,8 +50,8 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy javier Garcia Perez.</span> un apasionado desarrollador backend junior
-                 con experiencia en Java y un compromiso con la creación de soluciones tecnológicas 
+            <p><span>Hola, soy javier Garcia Perez.</span> un apasionado desarrollador Android Mobile
+                 con experiencia en Kotlin y Java y un compromiso con la creación de soluciones tecnológicas 
                  sólidas. Mi enfoque se centra en trabajar detrás de escena para garantizar que las 
                  aplicaciones funcionen sin problemas. Disfruto resolviendo desafíos técnicos y 
                  construyendo aplicaciones empresariales sólidas. Estoy ansioso por contribuir a 
@@ -139,10 +139,50 @@
                 <div class="col">
                     <h3>Technical Skills</h3>
                     <div class="skill">
+                        <span>Kotlin</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>50%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
                         <span>Java</span>
                         <div class="barra-skill">
                             <div class="progreso">
                                 <span>60%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Android Studio</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>65%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Jetpack Compose</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>25%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>SQLite</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>50%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Firebase</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>35%</span>
                             </div>
                         </div>
                     </div>
@@ -167,38 +207,6 @@
                         <div class="barra-skill">
                             <div class="progreso">
                                 <span>40%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="skill">
-                        <span>PostgreSQL</span>
-                        <div class="barra-skill">
-                            <div class="progreso">
-                                <span>40%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="skill">
-                        <span>SQLite</span>
-                        <div class="barra-skill">
-                            <div class="progreso">
-                                <span>50%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="skill">
-                        <span>Firebase</span>
-                        <div class="barra-skill">
-                            <div class="progreso">
-                                <span>45%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="skill">
-                        <span>Android Studio</span>
-                        <div class="barra-skill">
-                            <div class="progreso">
-                                <span>55%</span>
                             </div>
                         </div>
                     </div>
@@ -545,6 +553,51 @@
             <h2>PORTFOLIO</h2>
             <div class="galeria">
                 <div class="proyecto">
+                    <a href="https://github.com/javicia/android_app_horoscope.git">
+                    <img src="img/horoscopo.jpg" alt="">
+                    <div class="overlay" style="color:white;">
+                        <h3>Aplicación Android de Horoscopo</h3>
+                        <p>Kotlin, MVVM, Navigation, Dagger, Hilt, Flow, Corroutines, RecyclerView, Retrofit, Camera X, UnitTesting, UITesting.</p>
+                    </div>
+                </a>
+                </div>
+                <div class="proyecto">
+                    <a href="https://github.com/javicia/android_app_Calulator_IMC.git">
+                    <img src="img/imc.jpg" alt="">
+                    <div class="overlay" style="color:white;">
+                        <h3>Aplicación Android Cálculo IMC</h3>
+                        <p>Kotlin, Junit, Mockito.</p>
+                    </div>
+                </a>
+                </div>
+                <div class="proyecto">
+                    <a href="https://github.com/javicia/app-android-password">
+                    <img src="img/pass.jpg" alt="">
+                    <div class="overlay" style="color:white;">
+                        <h3>Aplicación Android para guardar contraseñas</h3>
+                        <p>Java, Android Studio, RecyclerView, SQLite, Encryption.</p>
+                    </div>
+                    </a>
+            </div>
+            <div class="proyecto">
+                <a href="https://github.com/javicia/android_app_SuperHero.git">
+                <img src="img/superHero.jpg" alt="">
+                <div class="overlay" style="color:white;">
+                    <h3>Aplicación Android de Super Heroes</h3>
+                    <p>Kotlin, MVVM, RecyclerView, Retrofit, Picasso, DataStore.</p>
+                </div>
+                </a>
+        </div>
+        <div class="proyecto">
+            <a href="https://github.com/javicia/android_app_Agenda.git">
+            <img src="img/agenda.jpg" alt="">
+            <div class="overlay" style="color:white;">
+                <h3>Aplicación Android Agenda Diaria</h3>
+                <p>Kotlin, Android Studio.</p>
+            </div>
+            </a>
+    </div>
+                <div class="proyecto">
                     <a href="https://github.com/javicia/blog-coches-api.git">
                     <img src="img/blog_coches.jpg" alt="">
                     <div class="overlay" style="color:white;">
@@ -571,15 +624,7 @@
                     </div>
                     </a>
                 </div>
-                <div class="proyecto">
-                    <a href="https://github.com/javicia/app-android-password">
-                    <img src="img/pass.jpg" alt="">
-                    <div class="overlay" style="color:white;">
-                        <h3>Aplicación Android para guardar contraseñas</h3>
-                        <p>Java, Android Studio, SDK, SQLite.</p>
-                    </div>
-                    </a>
-            </div>
+                
         </div>
     </section>
 
