--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <span>Jetpack Compose</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>25%</span>
+                                <span>40%</span>
                             </div>
                         </div>
                     </div>
@@ -351,7 +351,7 @@
                     <div class="item izq">
                         <h4>Ténico Superior en Desarrollo de Aplicaciones Multiplataforma</h4>
                         <span class="casa">Ilerna</span>
-                        <span class="fecha">2021 - 2023</span>
+                        <span class="fecha">2021 - 2024</span>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
@@ -446,17 +446,18 @@
                 <div class="col derecha">
                     <h3>Experiencia de trabajo</h3>
                     <div class="item der">
-                        <h4>Backend Junior Java</h4>
-                        <span class="casa">Tragsatec</span>
-                        <span class="fecha">2023 - Actualidad</span>
-                        <p>-Desarrollo de aplicaciones.</br>
+                        <h4>Android Mobile Developer</h4>
+                        <span class="casa">VASS</span>
+                        <span class="fecha">2024 - Actualidad</span>
+                        <p>-Diseño y desarrollo de aplicaciones nativas para Android</br>
                             -Mantenimiento de aplicaciones.</br>
                             -Testing y depuración.</br>
-                            -APIS y servicios web.</br>
-                            -Seguridad.</br>
+                            -Desarrollo de interfaces de usuario adaptativas y accesibles.</br>
+                            -Seguridad de aplicaciones.</br>
                             -Documentación de código.</br>
                             -Colaboración con otros programadores.</br>
-                            -Investigación de nuevas tecnologías.</br>
+                            -Trabajo en metodologías ágiles, participando activamente en sprints</br>
+                            -Investigación de nuevas tecnologías y frameworks.</br>
                             -Participación en reuniones de equipo.</p>
                         <div class="conectord">
                             <div class="circulod"></div>
@@ -465,7 +466,7 @@
                     <div class="item der">
                         <h4>Vigilante de seguridad</h4>
                         <span class="casa">INV.</span>
-                        <span class="fecha">2011 - 2023</span>
+                        <span class="fecha">2011 - 2024</span>
                         <p>Funciones de seguridad.</p>
                         <div class="conectord">
                             <div class="circulod"></div>
@@ -512,10 +513,10 @@
                         </div>
                     </div>
                     <div class="item der">
-                        <h4>Desarrollador de Software JEE</h4>
+                        <h4>Desarrollador de Software Java</h4>
                         <span class="casa">Sermicro</span>
-                        <span class="fecha">2008 - 2009</span>
-                        <b>-Desarrollo de software JEE.</b>
+                        <span class="fecha">2008 - 2008</span>
+                        <b>-Desarrollo de software Java.</b>
                             -Mantenimiento de software.</br>
                             -Testing y depuración.</br>
                             -Documentación de código.</br>
@@ -531,7 +532,7 @@
                     <div class="item der">
                         <h4>Especialista en soporte técnico</h4>
                         <span class="casa">Danone</span>
-                        <span class="fecha">2007 - 2008</span>
+                        <span class="fecha">2006 - 2007</span>
                         <p>-Mantenimiento de los sistemas informáticos.</br>
                             -Resolución de problemas técnicos.</br>
                             -Instalación y configuración de software.</br>
