--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <img src="img/fotoPerfil.png" alt="">
             </div>
             <h1>JAVIER GARCIA PEREZ</h1>
-            <h2>Desarrollador de Software - Android Mobile Developer</h2>
+            <h2>Desarrollador de Software Java- Android Mobile Developer</h2>
             <div class="redes">
                 <a href="https://github.com/javicia"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/javicia"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -50,8 +50,8 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy javier Garcia Perez.</span> un apasionado desarrollador Android Mobile
-                 con experiencia en Kotlin y Java y un compromiso con la creación de soluciones tecnológicas 
+            <p><span>Hola, soy Javier Garcia Perez.</span> un apasionado desarrollador de Backend y Android Mobile
+                 con experiencia en Java y kotlin y un compromiso con la creación de soluciones tecnológicas 
                  sólidas. Mi enfoque se centra en trabajar detrás de escena para garantizar que las 
                  aplicaciones funcionen sin problemas. Disfruto resolviendo desafíos técnicos y 
                  construyendo aplicaciones empresariales sólidas. Estoy ansioso por contribuir a 
